--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.05-gd00b8cb-dirty Configuration
+# Buildroot 2014.05-g858eeea-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -279,7 +279,7 @@ BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/raspberrypi/skeleton"
 BR2_ROOTFS_USERS_TABLES=""
-BR2_ROOTFS_OVERLAY=""
+BR2_ROOTFS_OVERLAY="overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi/postscript.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT=""
 BR2_ROOTFS_POST_SCRIPT_ARGS=""
