Add connman, remove dhcpcd

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.05-g0bbd626-dirty Configuration
+# Buildroot 2014.05-g7e7284f-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -175,7 +175,7 @@ BR2_UCLIBC_VERSION_0_9_33=y
 BR2_UCLIBC_VERSION_STRING="0.9.33.2"
 BR2_UCLIBC_CONFIG="board/raspberrypi/uClibc-0.9.33.config"
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
-# BR2_TOOLCHAIN_BUILDROOT_INET_IPV6 is not set
+BR2_TOOLCHAIN_BUILDROOT_INET_IPV6=y
 # BR2_TOOLCHAIN_BUILDROOT_INET_RPC is not set
 BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 # BR2_TOOLCHAIN_BUILDROOT_LOCALE is not set
@@ -226,6 +226,7 @@ BR2_GCC_ENABLE_TLS=y
 # BR2_PACKAGE_HOST_ELF2FLT is not set
 # BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
+BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
 BR2_INSTALL_LIBSTDCPP=y
 BR2_TOOLCHAIN_HAS_THREADS=y
@@ -337,10 +338,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox-1.22.x.config"
 # BR2_PACKAGE_BELLAGIO is not set
 BR2_PACKAGE_PROVIDES_LIBOPENMAX="rpi-userland"
 # BR2_PACKAGE_FAAD2 is not set
-
-#
-# ffmpeg needs a toolchain w/ largefile, IPv6
-#
+# BR2_PACKAGE_FFMPEG is not set
 # BR2_PACKAGE_FLAC is not set
 # BR2_PACKAGE_FLITE is not set
 # BR2_PACKAGE_GSTREAMER is not set
@@ -519,10 +517,7 @@ BR2_PACKAGE_PROVIDES_LIBGLES="rpi-userland"
 # BR2_PACKAGE_EFL is not set
 # BR2_PACKAGE_QT is not set
 BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
-
-#
-# Qt5 needs a toolchain w/ wchar, IPv6, NPTL, C++
-#
+# BR2_PACKAGE_QT5 is not set
 
 #
 # weston needs udev and a toolchain w/ threads, headers >= 3.0
@@ -677,26 +672,17 @@ BR2_DBUS_EXPAT=y
 # BR2_PACKAGE_ENSCRIPT is not set
 # BR2_PACKAGE_ERLANG is not set
 # BR2_PACKAGE_HASERL is not set
-
-#
-# jamvm needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_JAMVM is not set
 # BR2_PACKAGE_JIMTCL is not set
 # BR2_PACKAGE_LUA is not set
 # BR2_PACKAGE_LUAJIT is not set
-
-#
-# nodejs needs a toolchain w/ C++, IPv6, largefile, threads
-#
+# BR2_PACKAGE_NODEJS is not set
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
 # BR2_PACKAGE_PYTHON is not set
 # BR2_PACKAGE_PYTHON3 is not set
 # BR2_PACKAGE_RUBY is not set
-
-#
-# tcl needs a toolchain w/ ipv6, threads
-#
+# BR2_PACKAGE_TCL is not set
 
 #
 # Libraries
@@ -761,7 +747,8 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_BEECRYPT is not set
 # BR2_PACKAGE_CA_CERTIFICATES is not set
 # BR2_PACKAGE_CRYPTODEV is not set
-# BR2_PACKAGE_GNUTLS is not set
+BR2_PACKAGE_GNUTLS=y
+# BR2_PACKAGE_GNUTLS_TOOLS is not set
 # BR2_PACKAGE_LIBASSUAN is not set
 # BR2_PACKAGE_LIBGCRYPT is not set
 # BR2_PACKAGE_LIBGPG_ERROR is not set
@@ -772,7 +759,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBSECRET is not set
 # BR2_PACKAGE_LIBSHA1 is not set
 # BR2_PACKAGE_LIBSSH2 is not set
-# BR2_PACKAGE_NETTLE is not set
+BR2_PACKAGE_NETTLE=y
 # BR2_PACKAGE_OPENSSL is not set
 # BR2_PACKAGE_POLARSSL is not set
 
@@ -958,28 +945,16 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBPLAYER is not set
 # BR2_PACKAGE_LIBTHEORA is not set
 # BR2_PACKAGE_LIVE555 is not set
-
-#
-# mediastreamer needs a toolchain w/ threads, C++, IPv6
-#
+# BR2_PACKAGE_MEDIASTREAMER is not set
 
 #
 # Networking
 #
 # BR2_PACKAGE_AGENTPP is not set
 # BR2_PACKAGE_C_ARES is not set
-
-#
-# cppzmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# czmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# filemq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
+# BR2_PACKAGE_CPPZMQ is not set
+# BR2_PACKAGE_CZMQ is not set
+# BR2_PACKAGE_FILEMQ is not set
 # BR2_PACKAGE_GLIB_NETWORKING is not set
 # BR2_PACKAGE_LIBCGI is not set
 # BR2_PACKAGE_LIBCGICC is not set
@@ -994,34 +969,23 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBMICROHTTPD is not set
 # BR2_PACKAGE_LIBMNL is not set
 # BR2_PACKAGE_LIBMODBUS is not set
-
-#
-# libndp needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_LIBNDP is not set
 # BR2_PACKAGE_LIBNETFILTER_ACCT is not set
 # BR2_PACKAGE_LIBNETFILTER_CONNTRACK is not set
 # BR2_PACKAGE_LIBNETFILTER_CTHELPER is not set
 # BR2_PACKAGE_LIBNETFILTER_CTTIMEOUT is not set
 # BR2_PACKAGE_LIBNETFILTER_LOG is not set
+# BR2_PACKAGE_LIBNETFILTER_QUEUE is not set
 # BR2_PACKAGE_LIBNFNETLINK is not set
-
-#
-# libnftnl needs a toolchain w/ threads, IPv6, largefile
-#
+# BR2_PACKAGE_LIBNFTNL is not set
 # BR2_PACKAGE_LIBNL is not set
 # BR2_PACKAGE_LIBOAUTH is not set
-
-#
-# liboping needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_LIBOPING is not set
 # BR2_PACKAGE_LIBOSIP2 is not set
 # BR2_PACKAGE_LIBPCAP is not set
 # BR2_PACKAGE_LIBRSYNC is not set
 # BR2_PACKAGE_LIBSOCKETCAN is not set
-
-#
-# libshairplay needs a toolchain w/ IPv6, threads
-#
+# BR2_PACKAGE_LIBSHAIRPLAY is not set
 # BR2_PACKAGE_LIBSOUP is not set
 # BR2_PACKAGE_LIBSTROPHE is not set
 # BR2_PACKAGE_LIBTIRPC is not set
@@ -1031,10 +995,7 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBWEBSOCKETS is not set
 # BR2_PACKAGE_NEON is not set
 # BR2_PACKAGE_OMNIORB is not set
-
-#
-# openpgm needs a toolchain w/ wchar, threads, IPv6
-#
+# BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
 # BR2_PACKAGE_QDECODER is not set
 # BR2_PACKAGE_RTMPDUMP is not set
@@ -1043,18 +1004,9 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_THRIFT is not set
 # BR2_PACKAGE_USBREDIR is not set
 # BR2_PACKAGE_WVSTREAMS is not set
-
-#
-# zeromq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# zmqpp needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# zyre needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
+# BR2_PACKAGE_ZEROMQ is not set
+# BR2_PACKAGE_ZMQPP is not set
+# BR2_PACKAGE_ZYRE is not set
 
 #
 # Other
@@ -1071,7 +1023,7 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_FFTW is not set
 # BR2_PACKAGE_FLANN is not set
 # BR2_PACKAGE_GLIBMM is not set
-# BR2_PACKAGE_GMP is not set
+BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBARGTABLE2 is not set
@@ -1142,7 +1094,11 @@ BR2_PACKAGE_LIBICONV=y
 # BR2_PACKAGE_LINENOISE is not set
 # BR2_PACKAGE_NCURSES is not set
 # BR2_PACKAGE_NEWT is not set
-# BR2_PACKAGE_PCRE is not set
+BR2_PACKAGE_PCRE=y
+# BR2_PACKAGE_PCRE_16 is not set
+# BR2_PACKAGE_PCRE_32 is not set
+BR2_PACKAGE_PCRE_UTF=y
+BR2_PACKAGE_PCRE_UCP=y
 # BR2_PACKAGE_POPT is not set
 # BR2_PACKAGE_READLINE is not set
 # BR2_PACKAGE_SLANG is not set
@@ -1152,10 +1108,7 @@ BR2_PACKAGE_LIBICONV=y
 #
 # BR2_PACKAGE_AESPIPE is not set
 # BR2_PACKAGE_BC is not set
-
-#
-# collectd needs a toolchain w/ IPv6, threads
-#
+# BR2_PACKAGE_COLLECTD is not set
 # BR2_PACKAGE_EMPTY is not set
 # BR2_PACKAGE_GOOGLEFONTDIRECTORY is not set
 # BR2_PACKAGE_HAVEGED is not set
@@ -1179,10 +1132,7 @@ BR2_PACKAGE_LIBICONV=y
 #
 # Networking applications
 #
-
-#
-# aiccu needs a toolchain w/ IPv6, wchar, threads
-#
+# BR2_PACKAGE_AICCU is not set
 # BR2_PACKAGE_AIRCRACK_NG is not set
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
@@ -1190,33 +1140,33 @@ BR2_PACKAGE_LIBICONV=y
 # BR2_PACKAGE_AVAHI is not set
 # BR2_PACKAGE_AXEL is not set
 # BR2_PACKAGE_BCUSDK is not set
+# BR2_PACKAGE_BIND is not set
 BR2_PACKAGE_BLUEZ_UTILS=y
 BR2_PACKAGE_BLUEZ_UTILS_COMPAT=y
 BR2_PACKAGE_BLUEZ_UTILS_AUDIO=y
 BR2_PACKAGE_BLUEZ_UTILS_USB=y
 # BR2_PACKAGE_BLUEZ_UTILS_GATT is not set
-
-#
-# bmon needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BOA is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
 # BR2_PACKAGE_BWM_NG is not set
 # BR2_PACKAGE_CAN_UTILS is not set
 # BR2_PACKAGE_CHRONY is not set
 # BR2_PACKAGE_CIVETWEB is not set
-
-#
-# connman needs a toolchain w/ IPv6, wchar, threads, resolver
-#
-
-#
-# conntrack-tools needs a toolchain w/ IPv6, largefile, threads
-#
+BR2_PACKAGE_CONNMAN=y
+BR2_PACKAGE_CONNMAN_ETHERNET=y
+# BR2_PACKAGE_CONNMAN_WIFI is not set
+BR2_PACKAGE_CONNMAN_BLUETOOTH=y
+# BR2_PACKAGE_CONNMAN_LOOPBACK is not set
+# BR2_PACKAGE_CONNMAN_NEARD is not set
+# BR2_PACKAGE_CONNMAN_OFONO is not set
+# BR2_PACKAGE_CONNMAN_DEBUG is not set
+# BR2_PACKAGE_CONNMAN_CLIENT is not set
+# BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
 # BR2_PACKAGE_CTORRENT is not set
 # BR2_PACKAGE_CUPS is not set
-BR2_PACKAGE_DHCPCD=y
+# BR2_PACKAGE_DHCPCD is not set
 # BR2_PACKAGE_DHCPDUMP is not set
 # BR2_PACKAGE_DNSMASQ is not set
 BR2_PACKAGE_DROPBEAR=y
@@ -1224,20 +1174,14 @@ BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_DROPBEAR_WTMP is not set
 # BR2_PACKAGE_DROPBEAR_LASTLOG is not set
-
-#
-# ebtables needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_EBTABLES is not set
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_FPING is not set
 # BR2_PACKAGE_GESFTPSERVER is not set
 # BR2_PACKAGE_HIAWATHA is not set
 # BR2_PACKAGE_HOSTAPD is not set
 # BR2_PACKAGE_HTTPING is not set
-
-#
-# iftop needs a toolchain w/ IPv6, threads
-#
+# BR2_PACKAGE_IFTOP is not set
 # BR2_PACKAGE_IGH_ETHERCAT is not set
 # BR2_PACKAGE_IGMPPROXY is not set
 # BR2_PACKAGE_INADYN is not set
@@ -1245,11 +1189,8 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_IPROUTE2 is not set
 # BR2_PACKAGE_IPSEC_TOOLS is not set
 # BR2_PACKAGE_IPSET is not set
-# BR2_PACKAGE_IPTABLES is not set
-
-#
-# iptraf-ng needs a toolchain w/ IPv6
-#
+BR2_PACKAGE_IPTABLES=y
+# BR2_PACKAGE_IPTRAF_NG is not set
 # BR2_PACKAGE_IPUTILS is not set
 # BR2_PACKAGE_IW is not set
 # BR2_PACKAGE_KISMET is not set
@@ -1258,34 +1199,22 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_LIGHTTPD is not set
 # BR2_PACKAGE_LINKNX is not set
 # BR2_PACKAGE_LINKS is not set
-
-#
-# linphone needs a toolchain w/ threads, C++, IPv6
-#
+# BR2_PACKAGE_LINPHONE is not set
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MII_DIAG is not set
-
-#
-# minidlna needs a toolchain w/ largefile, IPv6, threads, wchar
-#
+# BR2_PACKAGE_MINIDLNA is not set
 
 #
 # modemmanager needs udev /dev management and a toolchain w/ largefile, wchar, threads, IPv6
 #
 # BR2_PACKAGE_MONGOOSE is not set
-
-#
-# mongrel2 needs a toolchain w/ C++, IPv6, threads, largefile, wchar
-#
+# BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MTR is not set
 # BR2_PACKAGE_NBD is not set
 # BR2_PACKAGE_NCFTP is not set
-
-#
-# ndisc6 needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_NDISC6 is not set
 # BR2_PACKAGE_NETATALK is not set
 # BR2_PACKAGE_NETPLUG is not set
 # BR2_PACKAGE_NETSNMP is not set
@@ -1295,34 +1224,19 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # NetworkManager needs udev /dev management and a toolchain w/ IPv6, largefile, wchar, threads
 #
 # BR2_PACKAGE_NFACCT is not set
-
-#
-# nftables needs a toolchain w/ IPv6, largefile, threads, wchar, headers >= 3.4
-#
+# BR2_PACKAGE_NFTABLES is not set
 # BR2_PACKAGE_NGIRCD is not set
 # BR2_PACKAGE_NGREP is not set
-
-#
-# nmap needs a toolchain w/ C++, IPv6, threads
-#
+# BR2_PACKAGE_NMAP is not set
 # BR2_PACKAGE_NOIP is not set
 # BR2_PACKAGE_NTP is not set
 # BR2_PACKAGE_NUTTCP is not set
-
-#
-# olsr needs a toolchain w/ IPv6, threads
-#
+# BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
-
-#
-# openobex needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_OPENOBEX is not set
 # BR2_PACKAGE_OPENSSH is not set
 # BR2_PACKAGE_OPENSWAN is not set
-
-#
-# openvpn needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_OPENVPN is not set
 # BR2_PACKAGE_P910ND is not set
 
 #
@@ -1335,37 +1249,22 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_PTPD is not set
 # BR2_PACKAGE_PTPD2 is not set
 # BR2_PACKAGE_QUAGGA is not set
-
-#
-# radvd needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_RADVD is not set
 # BR2_PACKAGE_RPCBIND is not set
 # BR2_PACKAGE_RSH_REDONE is not set
 # BR2_PACKAGE_RSYNC is not set
 # BR2_PACKAGE_RTORRENT is not set
 # BR2_PACKAGE_RTPTOOLS is not set
 # BR2_PACKAGE_SAMBA is not set
-
-#
-# samba4 needs a toolchain w/ IPv6, wchar, largfile, threads
-#
+# BR2_PACKAGE_SAMBA4 is not set
 # BR2_PACKAGE_SCONESERVER is not set
-
-#
-# ser2net needs a toolchain w/ IPv6
-#
-
-#
-# smcroute needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_SER2NET is not set
+# BR2_PACKAGE_SMCROUTE is not set
 # BR2_PACKAGE_SOCAT is not set
 # BR2_PACKAGE_SOCKETCAND is not set
 # BR2_PACKAGE_SPAWN_FCGI is not set
 # BR2_PACKAGE_SPICE_PROTOCOL is not set
-
-#
-# squid needs a toolchain w/ C++, IPv6
-#
+# BR2_PACKAGE_SQUID is not set
 # BR2_PACKAGE_STRONGSWAN is not set
 # BR2_PACKAGE_STUNNEL is not set
 # BR2_PACKAGE_TCPDUMP is not set
@@ -1374,24 +1273,12 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_THTTPD is not set
 # BR2_PACKAGE_TINYHTTPD is not set
 # BR2_PACKAGE_TN5250 is not set
-
-#
-# transmission needs a toolchain w/ IPv6, threads
-#
-
-#
-# tvheadend needs a toolchain w/ largefile, IPv6, NPTL, headers >= 3.2
-#
+# BR2_PACKAGE_TRANSMISSION is not set
+# BR2_PACKAGE_TVHEADEND is not set
 # BR2_PACKAGE_UDPCAST is not set
-
-#
-# ulogd needs a toolchain w/ IPv6, largefile, dynamic library
-#
+# BR2_PACKAGE_ULOGD is not set
 # BR2_PACKAGE_USHARE is not set
-
-#
-# ussp-push needs a toolchain w/ wchar, IPv6, threads, dynamic library
-#
+# BR2_PACKAGE_USSP_PUSH is not set
 # BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
@@ -1451,10 +1338,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_IPRUTILS is not set
 # BR2_PACKAGE_KEYUTILS is not set
 # BR2_PACKAGE_KMOD is not set
-
-#
-# lxc needs a toolchain w/ IPv6, threads, largefile
-#
+# BR2_PACKAGE_LXC is not set
 # BR2_PACKAGE_MONIT is not set
 # BR2_PACKAGE_NCDU is not set
 # BR2_PACKAGE_NUT is not set
