--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.05-g7e7284f-dirty Configuration
+# Buildroot 2014.05-g5f81216-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -299,9 +299,9 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.12.22"
 BR2_LINUX_KERNEL_VERSION="3.12.22"
 BR2_LINUX_KERNEL_PATCH="http://dl.guillermoamaral.com/rpi/kernel-3.12.22.patch"
-BR2_LINUX_KERNEL_USE_DEFCONFIG=y
-# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
-BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi_quick"
+# BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="rpi.kernel.config"
 # BR2_LINUX_KERNEL_UIMAGE is not set
 # BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
 BR2_LINUX_KERNEL_ZIMAGE=y
@@ -598,7 +598,7 @@ BR2_DBUS_EXPAT=y
 # BR2_PACKAGE_GPTFDISK is not set
 # BR2_PACKAGE_GVFS is not set
 # BR2_PACKAGE_HWDATA is not set
-# BR2_PACKAGE_I2C_TOOLS is not set
+BR2_PACKAGE_I2C_TOOLS=y
 # BR2_PACKAGE_INPUT_EVENT_DAEMON is not set
 # BR2_PACKAGE_INPUT_TOOLS is not set
 # BR2_PACKAGE_IOSTAT is not set
