--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.11-g49d8c02-dirty Configuration
+# Buildroot 2014.11-gc1bd052-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -432,10 +432,11 @@ BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # binutils needs a toolchain w/ wchar
 #
 # BR2_PACKAGE_BSDIFF is not set
+# BR2_PACKAGE_BUSTLE is not set
 # BR2_PACKAGE_CPPUNIT is not set
 # BR2_PACKAGE_CVS is not set
 # BR2_PACKAGE_FLEX is not set
-# BR2_PACKAGE_GETTEXT is not set
+BR2_PACKAGE_GETTEXT=y
 # BR2_PACKAGE_GIT is not set
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_JQ is not set
@@ -585,7 +586,11 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_CDRKIT is not set
 # BR2_PACKAGE_CRYPTSETUP is not set
 # BR2_PACKAGE_CWIID is not set
-# BR2_PACKAGE_DBUS is not set
+BR2_PACKAGE_DBUS=y
+# BR2_PACKAGE_DBUS_CPP is not set
+# BR2_PACKAGE_DBUS_GLIB is not set
+# BR2_PACKAGE_DBUS_PYTHON is not set
+# BR2_PACKAGE_DBUS_TRIGGERD is not set
 # BR2_PACKAGE_DMRAID is not set
 # BR2_PACKAGE_DVB_APPS is not set
 # BR2_PACKAGE_DVBSNOOP is not set
@@ -745,7 +750,7 @@ BR2_PACKAGE_PYTHON_UCS2=y
 # BR2_PACKAGE_PYTHON_DIALOG is not set
 # BR2_PACKAGE_PYTHON_DPKT is not set
 # BR2_PACKAGE_PYTHON_FLUP is not set
-# BR2_PACKAGE_PYTHON_ID3 is not set
+BR2_PACKAGE_PYTHON_ID3=y
 # BR2_PACKAGE_PYTHON_IPY is not set
 # BR2_PACKAGE_PYTHON_IPYTHON is not set
 # BR2_PACKAGE_PYTHON_JSON_SCHEMA_VALIDATOR is not set
@@ -773,7 +778,7 @@ BR2_PACKAGE_PYTHON_UCS2=y
 # python-pyzmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
 #
 # BR2_PACKAGE_PYTHON_RTSLIB_FB is not set
-# BR2_PACKAGE_PYTHON_SERIAL is not set
+BR2_PACKAGE_PYTHON_SERIAL=y
 # BR2_PACKAGE_PYTHON_SETUPTOOLS is not set
 # BR2_PACKAGE_PYTHON_SIMPLEJSON is not set
 BR2_PACKAGE_PYTHON_SMBUS=y
@@ -794,7 +799,23 @@ BR2_PACKAGE_PYTHON_SMBUS=y
 #
 # Audio/Sound
 #
-# BR2_PACKAGE_ALSA_LIB is not set
+BR2_PACKAGE_ALSA_LIB=y
+# BR2_PACKAGE_ALSA_LIB_PYTHON is not set
+
+#
+# ALSA lib selection
+#
+BR2_PACKAGE_ALSA_LIB_DEVDIR="/dev/snd"
+BR2_PACKAGE_ALSA_LIB_PCM_PLUGINS="all"
+BR2_PACKAGE_ALSA_LIB_CTL_PLUGINS="all"
+BR2_PACKAGE_ALSA_LIB_ALOAD=y
+BR2_PACKAGE_ALSA_LIB_MIXER=y
+BR2_PACKAGE_ALSA_LIB_PCM=y
+BR2_PACKAGE_ALSA_LIB_RAWMIDI=y
+BR2_PACKAGE_ALSA_LIB_HWDEP=y
+BR2_PACKAGE_ALSA_LIB_SEQ=y
+BR2_PACKAGE_ALSA_LIB_ALISP=y
+BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS=y
 # BR2_PACKAGE_AUDIOFILE is not set
 # BR2_PACKAGE_CELT051 is not set
 # BR2_PACKAGE_FDK_AAC is not set
@@ -811,7 +832,7 @@ BR2_PACKAGE_PYTHON_SMBUS=y
 # BR2_PACKAGE_LIBMPDCLIENT is not set
 # BR2_PACKAGE_LIBREPLAYGAIN is not set
 # BR2_PACKAGE_LIBSAMPLERATE is not set
-# BR2_PACKAGE_LIBSNDFILE is not set
+BR2_PACKAGE_LIBSNDFILE=y
 # BR2_PACKAGE_LIBSOXR is not set
 # BR2_PACKAGE_LIBVORBIS is not set
 # BR2_PACKAGE_MP4V2 is not set
@@ -831,7 +852,7 @@ BR2_PACKAGE_PYTHON_SMBUS=y
 # BR2_PACKAGE_LIBARCHIVE is not set
 # BR2_PACKAGE_LZO is not set
 # BR2_PACKAGE_SNAPPY is not set
-# BR2_PACKAGE_ZLIB is not set
+BR2_PACKAGE_ZLIB=y
 
 #
 # Crypto
@@ -975,7 +996,8 @@ BR2_PACKAGE_WEBKIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBRTLSDR is not set
 # BR2_PACKAGE_LIBSERIAL is not set
 # BR2_PACKAGE_LIBSOC is not set
-# BR2_PACKAGE_LIBUSB is not set
+BR2_PACKAGE_LIBUSB=y
+# BR2_PACKAGE_LIBUSB_COMPAT is not set
 # BR2_PACKAGE_LIBV4L is not set
 # BR2_PACKAGE_LIBXKBCOMMON is not set
 # BR2_PACKAGE_MTDEV is not set
@@ -1006,7 +1028,7 @@ BR2_PACKAGE_WEBKIT_ARCH_SUPPORTS=y
 # JSON/XML
 #
 # BR2_PACKAGE_CJSON is not set
-# BR2_PACKAGE_EXPAT is not set
+BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
@@ -1204,7 +1226,7 @@ BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBEVENT is not set
 BR2_PACKAGE_LIBFFI=y
 # BR2_PACKAGE_LIBGC is not set
-# BR2_PACKAGE_LIBGLIB2 is not set
+BR2_PACKAGE_LIBGLIB2=y
 # BR2_PACKAGE_LIBICAL is not set
 BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LIBNSPR is not set
@@ -1259,14 +1281,19 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LIBENCA is not set
 # BR2_PACKAGE_LIBESTR is not set
 # BR2_PACKAGE_LIBFRIBIDI is not set
-# BR2_PACKAGE_LIBICONV is not set
+BR2_PACKAGE_LIBICONV=y
 # BR2_PACKAGE_LIBUNISTRING is not set
 # BR2_PACKAGE_LINENOISE is not set
-# BR2_PACKAGE_NCURSES is not set
+BR2_PACKAGE_NCURSES=y
+# BR2_PACKAGE_NCURSES_WCHAR is not set
+# BR2_PACKAGE_NCURSES_TARGET_PANEL is not set
+# BR2_PACKAGE_NCURSES_TARGET_FORM is not set
+# BR2_PACKAGE_NCURSES_TARGET_MENU is not set
+# BR2_PACKAGE_NCURSES_TARGET_PROGS is not set
 # BR2_PACKAGE_NEWT is not set
 # BR2_PACKAGE_PCRE is not set
 # BR2_PACKAGE_POPT is not set
-# BR2_PACKAGE_READLINE is not set
+BR2_PACKAGE_READLINE=y
 # BR2_PACKAGE_SLANG is not set
 # BR2_PACKAGE_TCLAP is not set
 
@@ -1330,10 +1357,18 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 #
 # bind needs a toolchain w/ largefile, IPv6, dynamic library
 #
-# BR2_PACKAGE_BLUEZ_UTILS is not set
+BR2_PACKAGE_BLUEZ_UTILS=y
+BR2_PACKAGE_BLUEZ_UTILS_COMPAT=y
+BR2_PACKAGE_BLUEZ_UTILS_AUDIO=y
+BR2_PACKAGE_BLUEZ_UTILS_USB=y
+BR2_PACKAGE_BLUEZ_UTILS_GATT=y
 
 #
 # bluez5-utils needs a toolchain w/ wchar, threads, IPv6, headers >= 3.4, dynamic library
+#
+
+#
+# bluez5-utils conflicts with older bluez-utils version
 #
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BOA is not set
