Change to Bluez5

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.11-gc1bd052-dirty Configuration
+# Buildroot 2014.11-g2aa3ecb Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -175,7 +175,7 @@ BR2_UCLIBC_VERSION_0_9_33=y
 BR2_UCLIBC_VERSION_STRING="0.9.33.2"
 BR2_UCLIBC_CONFIG="board/raspberrypi/uClibc-0.9.33.config"
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
-# BR2_TOOLCHAIN_BUILDROOT_INET_IPV6 is not set
+BR2_TOOLCHAIN_BUILDROOT_INET_IPV6=y
 # BR2_TOOLCHAIN_BUILDROOT_INET_RPC is not set
 BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 # BR2_TOOLCHAIN_BUILDROOT_LOCALE is not set
@@ -218,6 +218,7 @@ BR2_GCC_ENABLE_TLS=y
 # BR2_GCC_ENABLE_GRAPHITE is not set
 # BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
+BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
 BR2_INSTALL_LIBSTDCPP=y
 BR2_TOOLCHAIN_HAS_THREADS=y
@@ -325,10 +326,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox.config"
 BR2_PACKAGE_PROVIDES_LIBOPENMAX="rpi-userland"
 # BR2_PACKAGE_ESPEAK is not set
 # BR2_PACKAGE_FAAD2 is not set
-
-#
-# ffmpeg needs a toolchain w/ largefile, IPv6
-#
+# BR2_PACKAGE_FFMPEG is not set
 # BR2_PACKAGE_FLAC is not set
 # BR2_PACKAGE_FLITE is not set
 # BR2_PACKAGE_GSTREAMER is not set
@@ -356,11 +354,8 @@ BR2_PACKAGE_PROVIDES_LIBOPENMAX="rpi-userland"
 # BR2_PACKAGE_VORBIS_TOOLS is not set
 # BR2_PACKAGE_WAVPACK is not set
 BR2_PACKAGE_XBMC_ARCH_SUPPORTS=y
-
-#
-# xbmc needs a toolchain w/ C++, IPv6, largefile, threads, wchar
-#
 BR2_PACKAGE_XBMC_EGL_GLES=y
+# BR2_PACKAGE_XBMC is not set
 # BR2_PACKAGE_YAVTA is not set
 # BR2_PACKAGE_YMPD is not set
 
@@ -534,10 +529,7 @@ BR2_PACKAGE_PROVIDES_LIBGLES="rpi-userland"
 # BR2_PACKAGE_QT is not set
 BR2_PACKAGE_QT5_GL_AVAILABLE=y
 BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
-
-#
-# Qt5 needs a toolchain w/ wchar, IPv6, NPTL, C++
-#
+# BR2_PACKAGE_QT5 is not set
 
 #
 # weston needs udev and a toolchain w/ threads, dynamic library, headers >= 3.0
@@ -694,22 +686,13 @@ BR2_PACKAGE_I2C_TOOLS=y
 # BR2_PACKAGE_ENSCRIPT is not set
 # BR2_PACKAGE_ERLANG is not set
 # BR2_PACKAGE_HASERL is not set
-
-#
-# jamvm needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_JAMVM is not set
 # BR2_PACKAGE_JIMTCL is not set
 # BR2_PACKAGE_LUA is not set
 # BR2_PACKAGE_LUAJIT is not set
 BR2_PACKAGE_MONO_ARCH_SUPPORTS=y
-
-#
-# mono needs a toolchain w/ IPv6, threads
-#
-
-#
-# nodejs needs a toolchain w/ C++, IPv6, largefile, threads
-#
+# BR2_PACKAGE_MONO is not set
+# BR2_PACKAGE_NODEJS is not set
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
 BR2_PACKAGE_PYTHON=y
@@ -773,10 +756,7 @@ BR2_PACKAGE_PYTHON_ID3=y
 # BR2_PACKAGE_PYTHON_PYSNMP_APPS is not set
 # BR2_PACKAGE_PYTHON_PYSNMP_MIBS is not set
 # BR2_PACKAGE_PYTHON_PYUSB is not set
-
-#
-# python-pyzmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
+# BR2_PACKAGE_PYTHON_PYZMQ is not set
 # BR2_PACKAGE_PYTHON_RTSLIB_FB is not set
 BR2_PACKAGE_PYTHON_SERIAL=y
 # BR2_PACKAGE_PYTHON_SETUPTOOLS is not set
@@ -787,10 +767,7 @@ BR2_PACKAGE_PYTHON_SMBUS=y
 # BR2_PACKAGE_PYTHON_URWID is not set
 # BR2_PACKAGE_PYTHON_VERSIONTOOLS is not set
 # BR2_PACKAGE_RUBY is not set
-
-#
-# tcl needs a toolchain w/ ipv6, threads
-#
+# BR2_PACKAGE_TCL is not set
 
 #
 # Libraries
@@ -1079,10 +1056,7 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBPLAYER is not set
 # BR2_PACKAGE_LIBTHEORA is not set
 # BR2_PACKAGE_LIVE555 is not set
-
-#
-# mediastreamer needs a toolchain w/ threads, C++, IPv6
-#
+# BR2_PACKAGE_MEDIASTREAMER is not set
 # BR2_PACKAGE_X264 is not set
 
 #
@@ -1092,18 +1066,9 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_C_ARES is not set
 BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CANFESTIVAL is not set
-
-#
-# cppzmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# czmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# filemq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
+# BR2_PACKAGE_CPPZMQ is not set
+# BR2_PACKAGE_CZMQ is not set
+# BR2_PACKAGE_FILEMQ is not set
 # BR2_PACKAGE_FLICKCURL is not set
 # BR2_PACKAGE_GEOIP is not set
 # BR2_PACKAGE_GLIB_NETWORKING is not set
@@ -1121,34 +1086,23 @@ BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBMICROHTTPD is not set
 # BR2_PACKAGE_LIBMNL is not set
 # BR2_PACKAGE_LIBMODBUS is not set
-
-#
-# libndp needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_LIBNDP is not set
 # BR2_PACKAGE_LIBNETFILTER_ACCT is not set
 # BR2_PACKAGE_LIBNETFILTER_CONNTRACK is not set
 # BR2_PACKAGE_LIBNETFILTER_CTHELPER is not set
 # BR2_PACKAGE_LIBNETFILTER_CTTIMEOUT is not set
 # BR2_PACKAGE_LIBNETFILTER_LOG is not set
+# BR2_PACKAGE_LIBNETFILTER_QUEUE is not set
 # BR2_PACKAGE_LIBNFNETLINK is not set
-
-#
-# libnftnl needs a toolchain w/ threads, IPv6, largefile
-#
+# BR2_PACKAGE_LIBNFTNL is not set
 # BR2_PACKAGE_LIBNL is not set
 # BR2_PACKAGE_LIBOAUTH is not set
-
-#
-# liboping needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_LIBOPING is not set
 # BR2_PACKAGE_LIBOSIP2 is not set
 # BR2_PACKAGE_LIBPCAP is not set
 # BR2_PACKAGE_LIBRSYNC is not set
 # BR2_PACKAGE_LIBSOCKETCAN is not set
-
-#
-# libshairplay needs a toolchain w/ IPv6, threads, dynamic library
-#
+# BR2_PACKAGE_LIBSHAIRPLAY is not set
 # BR2_PACKAGE_LIBSHOUT is not set
 # BR2_PACKAGE_LIBSOUP is not set
 # BR2_PACKAGE_LIBSTROPHE is not set
@@ -1160,10 +1114,7 @@ BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBWEBSOCKETS is not set
 # BR2_PACKAGE_NEON is not set
 # BR2_PACKAGE_OMNIORB is not set
-
-#
-# openpgm needs a toolchain w/ wchar, threads, IPv6
-#
+# BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
 # BR2_PACKAGE_QDECODER is not set
 # BR2_PACKAGE_RTMPDUMP is not set
@@ -1172,18 +1123,9 @@ BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_THRIFT is not set
 # BR2_PACKAGE_USBREDIR is not set
 # BR2_PACKAGE_WVSTREAMS is not set
-
-#
-# zeromq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# zmqpp needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# zyre needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
+# BR2_PACKAGE_ZEROMQ is not set
+# BR2_PACKAGE_ZMQPP is not set
+# BR2_PACKAGE_ZYRE is not set
 
 #
 # Other
@@ -1245,10 +1187,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # libunwind needs a uclibc snapshot or (e)glibc toolchain w/ threads
 #
 # BR2_PACKAGE_LIBURCU is not set
-
-#
-# libuv needs a toolchain w/ IPv6, threads
-#
+# BR2_PACKAGE_LIBUV is not set
 
 #
 # linux-pam needs a toolchain w/ wchar, locale, dynamic library
@@ -1303,10 +1242,7 @@ BR2_PACKAGE_READLINE=y
 # BR2_PACKAGE_AESPIPE is not set
 # BR2_PACKAGE_BC is not set
 # BR2_PACKAGE_CLAMAV is not set
-
-#
-# collectd needs a toolchain w/ IPv6, threads, dynamic library
-#
+# BR2_PACKAGE_COLLECTD is not set
 # BR2_PACKAGE_EMPTY is not set
 # BR2_PACKAGE_GOOGLEFONTDIRECTORY is not set
 # BR2_PACKAGE_HAVEGED is not set
@@ -1320,10 +1256,7 @@ BR2_PACKAGE_READLINE=y
 #
 # Mail
 #
-
-#
-# dovecot needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_DOVECOT is not set
 # BR2_PACKAGE_EXIM is not set
 # BR2_PACKAGE_FETCHMAIL is not set
 # BR2_PACKAGE_HEIRLOOM_MAILX is not set
@@ -1334,42 +1267,24 @@ BR2_PACKAGE_READLINE=y
 #
 # Networking applications
 #
-
-#
-# aiccu needs a toolchain w/ IPv6, wchar, threads
-#
+# BR2_PACKAGE_AICCU is not set
 # BR2_PACKAGE_AIRCRACK_NG is not set
-
-#
-# argus needs a toolchain w/ threads, IPv6
-#
+# BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
-
-#
-# atftp needs a toolchain w/ threads, IPv6
-#
+# BR2_PACKAGE_ATFTP is not set
 # BR2_PACKAGE_AUTOSSH is not set
 # BR2_PACKAGE_AVAHI is not set
 # BR2_PACKAGE_AXEL is not set
 # BR2_PACKAGE_BANDWIDTHD is not set
 # BR2_PACKAGE_BCUSDK is not set
-
-#
-# bind needs a toolchain w/ largefile, IPv6, dynamic library
-#
-BR2_PACKAGE_BLUEZ_UTILS=y
-BR2_PACKAGE_BLUEZ_UTILS_COMPAT=y
-BR2_PACKAGE_BLUEZ_UTILS_AUDIO=y
-BR2_PACKAGE_BLUEZ_UTILS_USB=y
-BR2_PACKAGE_BLUEZ_UTILS_GATT=y
-
-#
-# bluez5-utils needs a toolchain w/ wchar, threads, IPv6, headers >= 3.4, dynamic library
-#
-
-#
-# bluez5-utils conflicts with older bluez-utils version
-#
+# BR2_PACKAGE_BIND is not set
+# BR2_PACKAGE_BLUEZ_UTILS is not set
+BR2_PACKAGE_BLUEZ5_UTILS=y
+# BR2_PACKAGE_BLUEZ5_UTILS_OBEX is not set
+BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+BR2_PACKAGE_BLUEZ5_UTILS_GATTTOOL=y
+BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
+BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BOA is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
@@ -1377,14 +1292,8 @@ BR2_PACKAGE_BLUEZ_UTILS_GATT=y
 # BR2_PACKAGE_CAN_UTILS is not set
 # BR2_PACKAGE_CHRONY is not set
 # BR2_PACKAGE_CIVETWEB is not set
-
-#
-# connman needs a toolchain w/ IPv6, wchar, threads, resolver, dynamic library
-#
-
-#
-# conntrack-tools needs a toolchain w/ IPv6, largefile, threads
-#
+# BR2_PACKAGE_CONNMAN is not set
+# BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
 # BR2_PACKAGE_CTORRENT is not set
 # BR2_PACKAGE_CUPS is not set
@@ -1396,10 +1305,7 @@ BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_DROPBEAR_WTMP is not set
 # BR2_PACKAGE_DROPBEAR_LASTLOG is not set
-
-#
-# ebtables needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_EBTABLES is not set
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_FAIFA is not set
 # BR2_PACKAGE_FPING is not set
@@ -1407,10 +1313,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_HIAWATHA is not set
 # BR2_PACKAGE_HOSTAPD is not set
 # BR2_PACKAGE_HTTPING is not set
-
-#
-# iftop needs a toolchain w/ IPv6, threads
-#
+# BR2_PACKAGE_IFTOP is not set
 # BR2_PACKAGE_IGH_ETHERCAT is not set
 # BR2_PACKAGE_IGMPPROXY is not set
 # BR2_PACKAGE_INADYN is not set
@@ -1419,10 +1322,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_IPSEC_TOOLS is not set
 # BR2_PACKAGE_IPSET is not set
 # BR2_PACKAGE_IPTABLES is not set
-
-#
-# iptraf-ng needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_IPTRAF_NG is not set
 # BR2_PACKAGE_IPUTILS is not set
 # BR2_PACKAGE_IW is not set
 # BR2_PACKAGE_KISMET is not set
@@ -1432,36 +1332,24 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_LIGHTTPD is not set
 # BR2_PACKAGE_LINKNX is not set
 # BR2_PACKAGE_LINKS is not set
-
-#
-# linphone needs a toolchain w/ threads, C++, IPv6
-#
+# BR2_PACKAGE_LINPHONE is not set
 # BR2_PACKAGE_LINUX_ZIGBEE is not set
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MEMCACHED is not set
 # BR2_PACKAGE_MII_DIAG is not set
-
-#
-# minidlna needs a toolchain w/ largefile, IPv6, threads, wchar
-#
+# BR2_PACKAGE_MINIDLNA is not set
 
 #
 # modemmanager needs udev /dev management and a toolchain w/ largefile, wchar, threads, IPv6
 #
 # BR2_PACKAGE_MONGOOSE is not set
-
-#
-# mongrel2 needs a toolchain w/ C++, IPv6, threads, largefile, wchar
-#
+# BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MTR is not set
 # BR2_PACKAGE_NBD is not set
 # BR2_PACKAGE_NCFTP is not set
-
-#
-# ndisc6 needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_NDISC6 is not set
 # BR2_PACKAGE_NETATALK is not set
 # BR2_PACKAGE_NETPLUG is not set
 # BR2_PACKAGE_NETSNMP is not set
@@ -1471,36 +1359,21 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # NetworkManager needs udev /dev management and a toolchain w/ IPv6, largefile, wchar, threads, headers >= 3.7
 #
 # BR2_PACKAGE_NFACCT is not set
-
-#
-# nftables needs a toolchain w/ IPv6, largefile, threads, wchar, headers >= 3.4
-#
+# BR2_PACKAGE_NFTABLES is not set
 # BR2_PACKAGE_NGINX is not set
 # BR2_PACKAGE_NGIRCD is not set
 # BR2_PACKAGE_NGREP is not set
-
-#
-# nmap needs a toolchain w/ C++, IPv6, threads
-#
+# BR2_PACKAGE_NMAP is not set
 # BR2_PACKAGE_NOIP is not set
 # BR2_PACKAGE_NTP is not set
 # BR2_PACKAGE_NUTTCP is not set
 # BR2_PACKAGE_ODHCPLOC is not set
-
-#
-# olsr needs a toolchain w/ IPv6, threads
-#
+# BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
-
-#
-# openobex needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_OPENOBEX is not set
 # BR2_PACKAGE_OPENSSH is not set
 # BR2_PACKAGE_OPENSWAN is not set
-
-#
-# openvpn needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_OPENVPN is not set
 # BR2_PACKAGE_P910ND is not set
 # BR2_PACKAGE_PHIDGETWEBSERVICE is not set
 
@@ -1515,38 +1388,23 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_PTPD2 is not set
 # BR2_PACKAGE_PURE_FTPD is not set
 # BR2_PACKAGE_QUAGGA is not set
-
-#
-# radvd needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_RADVD is not set
 # BR2_PACKAGE_RPCBIND is not set
 # BR2_PACKAGE_RSH_REDONE is not set
 # BR2_PACKAGE_RSYNC is not set
 # BR2_PACKAGE_RTORRENT is not set
 # BR2_PACKAGE_RTPTOOLS is not set
 # BR2_PACKAGE_SAMBA is not set
-
-#
-# samba4 needs a toolchain w/ IPv6, wchar, largfile, threads
-#
+# BR2_PACKAGE_SAMBA4 is not set
 # BR2_PACKAGE_SCONESERVER is not set
-
-#
-# ser2net needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_SER2NET is not set
 # BR2_PACKAGE_SHAIRPORT_SYNC is not set
-
-#
-# smcroute needs a toolchain w/ IPv6
-#
+# BR2_PACKAGE_SMCROUTE is not set
 # BR2_PACKAGE_SOCAT is not set
 # BR2_PACKAGE_SOCKETCAND is not set
 # BR2_PACKAGE_SPAWN_FCGI is not set
 # BR2_PACKAGE_SPICE_PROTOCOL is not set
-
-#
-# squid needs a toolchain w/ C++, IPv6, headers >= 3.0
-#
+# BR2_PACKAGE_SQUID is not set
 # BR2_PACKAGE_SSHPASS is not set
 # BR2_PACKAGE_STRONGSWAN is not set
 # BR2_PACKAGE_STUNNEL is not set
@@ -1556,24 +1414,12 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_THTTPD is not set
 # BR2_PACKAGE_TINYHTTPD is not set
 # BR2_PACKAGE_TN5250 is not set
-
-#
-# transmission needs a toolchain w/ IPv6, threads
-#
-
-#
-# tvheadend needs a toolchain w/ largefile, IPv6, NPTL, headers >= 3.2
-#
+# BR2_PACKAGE_TRANSMISSION is not set
+# BR2_PACKAGE_TVHEADEND is not set
 # BR2_PACKAGE_UDPCAST is not set
-
-#
-# ulogd needs a toolchain w/ IPv6, largefile, dynamic library
-#
+# BR2_PACKAGE_ULOGD is not set
 # BR2_PACKAGE_USHARE is not set
-
-#
-# ussp-push needs a toolchain w/ wchar, IPv6, threads, dynamic library
-#
+# BR2_PACKAGE_USSP_PUSH is not set
 # BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
@@ -1638,10 +1484,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_IPRUTILS is not set
 # BR2_PACKAGE_KEYUTILS is not set
 # BR2_PACKAGE_KMOD is not set
-
-#
-# lxc needs a toolchain w/ IPv6, threads, largefile, headers >= 3.0
-#
+# BR2_PACKAGE_LXC is not set
 # BR2_PACKAGE_MONIT is not set
 # BR2_PACKAGE_NCDU is not set
 # BR2_PACKAGE_NUT is not set
